[package]
name = "file-eater"
version = "0.1.0"
authors = ["ManuelR <manuel.rupp@unitedplanet.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.41"
tempfile = "3"